force-app/main/default/objects/Procedure__c/Procedure__c.object-meta.xml
<CustomObject>
    <label>Procedure</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Procedure #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>