force-app/main/default/objects/Procedure__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Procedures</relationshipLabel>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>