force-app/main/default/objects/Procedure__c/fields/Animal_ID_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID_Procedure__c</fullName>
    <formula>Animal_Name__c  &amp;&quot;: &quot; &amp; Procedure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal ID/Procedure</label>
    <type>Text</type>
</CustomField>