force-app/main/default/objects/Procedure__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <formula>IF(ISBLANK(Animal__r.Animal_Name__c),Animal__r.Name,Animal__r.Animal_Name__c+&quot; - &quot;+ Animal__r.Name )</formula>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>