force-app/main/default/objects/Procedure__c/fields/Animal_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name_Id__c</fullName>
    <formula>Animal__r.Animal_Name_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name/Id</label>
    <type>Text</type>
</CustomField>