force-app/main/default/objects/Procedure__c/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <label>Appointment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>