force-app/main/default/objects/Procedure__c/fields/Approved_by_Legal__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Legal?</label>
    <type>Checkbox</type>
</CustomField>