force-app/main/default/objects/Procedure__c/fields/Behavior_Grade__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Grade__c</fullName>
    <formula>TEXT(Animal__r.Current_Behavior_Grade__c)</formula>
    <label>Behavior Grade</label>
    <type>Text</type>
</CustomField>