force-app/main/default/objects/Procedure__c/fields/Calendar_Display_Start__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Display_Start__c</fullName>
    <formula>if( Show_On_Calendar__c = true,  Procedure_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Display Start</label>
    <type>DateTime</type>
</CustomField>