force-app/main/default/objects/Procedure__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <formula>TEXT(Animal__r.Shelter_Color_Coding__c)</formula>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>