force-app/main/default/objects/Procedure__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <label>Editor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>