force-app/main/default/objects/Procedure__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <type>TextArea</type>
</CustomField>