force-app/main/default/objects/Procedure__c/fields/Show_On_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Calendar</label>
    <type>Checkbox</type>
</CustomField>