force-app/main/default/objects/Procedure__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested by Forensics</fullName>
            </value>
            <value>
                <fullName>Requested by Medical</fullName>
            </value>
            <value>
                <fullName>Requested by Legal</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Foster Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>